Fix some requested issues

--- a/main/static/css/custom-style.css
+++ b/main/static/css/custom-style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #1b2850;
+    background-color: #FF4343;
     color: #fff;
     text-align: center;
     padding: 20px;
