--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -35,6 +35,18 @@
             margin: 10px;
         }
 
+        .custom-bg {
+            background-color: #FF4343;
+        }
+
+        .cutom-border-rad {
+            border-radius: 10px;
+        }
+
+        .custom-color{
+            color: #FF4343;
+        }
+
     </style>
 </head>
 
@@ -92,12 +104,12 @@
                 <img src="{% static 'img/banner.jpg' %}" alt="img ">
             </div>
             <div class="home_txt ">
-                <p class="collectio ">Legit Busog</p>
-                <h2>Your all day breakfast<br> adventure starts here.</h2>
+                <p class="collection">Legit Busog</p>
+                <h2 style="color: #FF4343;">Your all day breakfast<br> adventure starts here.</h2>
                 <div class="home_label ">
                     <p>A a popular restaurant chain located at<br>Zone-8 Bulan Sorsogon.</p>
                 </div>
-                <button><a href="{% url 'main_food' %}">ORDER NOW</a><i class='bx bx-right-arrow-alt'></i></button>
+                <button class="cutom-border-rad custom-bg"><a href="{% url 'main_food' %}">ORDER NOW</a><i class='bx bx-right-arrow-alt'></i></button>
             </div>
         </div>
 
@@ -110,7 +122,7 @@
         <div class="collections ">
             {% for cat in category %}
             <div class="content">
-                <img src="{{ cat.img.url }}" alt="img" />
+                <img src="{{ cat.img.url }}" style="border-radius: 10px; margin-bottom: 10px;" alt="img" />
                 <div class="img-content">
                     <p>{{ cat.category_name }}</p>
                     <button><a href="{% url 'view_product_category' cat.id %}">SHOW NOW</a></button>
@@ -127,7 +139,7 @@
             <div class="best-seller">
                 {% for food in foods %}
                 <div class="best-p1">
-                    <img src="{{ food.image.url }}" alt="img">
+                    <img src="{{ food.image.url }}" alt="img" style="border-radius: 10px; margin-bottom: 10px;">
                     <div class="best-p1-txt">
                         <div class="name-of-p">
                             <p>{{ food.name }}</p>
@@ -181,7 +193,7 @@
                         <input type="email" name="email" id="email" placeholder="Email" required>
                         <textarea name="message" id="message" cols="52" rows="7" placeholder="Message"
                                   required></textarea>
-                        <button>SEND MESSAGE</button>
+                        <button class="cutom-border-rad">SEND MESSAGE</button>
                     </div>
                 </div>
             </form>
