--- a/main/templates/main/pages/foodproduct.html
+++ b/main/templates/main/pages/foodproduct.html
@@ -22,7 +22,7 @@ List of Food
         <div class="foodproduct">
             {% for food in foods %}
             <div class="best-p1">
-                <img src="{{ food.image.url }}" alt="img">
+                <img src="{{ food.image.url }}" style="border-radius: 10px; margin-bottom: 10px; margin-top: 20px;" alt="img">
                 <div class="best-p1-txt">
                     <div class="name-of-p">
                         <p>{{ food.name }}</p>
@@ -55,4 +55,5 @@ List of Food
 
 {% endblock %}
 {% block javascripts %}
+
 {% endblock javascripts %}
