--- a/main/static/css/foodproduct.css
+++ b/main/static/css/foodproduct.css
@@ -6,7 +6,7 @@
 .foodproduct {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -60,12 +60,12 @@
     font-size: 14px;
     cursor: pointer;
     text-transform: uppercase;
-    background-color: #f05e8a;
+    background-color: #FF4343;
     color: var(--white);
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
     font-weight: 500;
-    border: 1px solid #f05e8a;
+    border: 1px solid #FF4343;
     transition: 0.5s;
 }
 .foodproduct .buy-now button:hover,
@@ -76,7 +76,7 @@
 
 .foodproduct .buy-now button:hover a,
 .foodproduct .add-cart button:hover a {
-    color: #f05e8a;
+    color: #FF4343;
 }
 
 .search {
@@ -88,7 +88,7 @@
     outline: none;
     border-radius: 4px;
     box-sizing: border-box;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
