--- a/main/templates/main/admin/editprofile.html
+++ b/main/templates/main/admin/editprofile.html
@@ -16,39 +16,37 @@
             <div class="col-md-6">
                 <div class="mb-3">
                     <label for="fname" class="form-label">First Name</label>
-                    <input type="text" class="form-control" value="{{ user.first_name | title }}" name="fname"
-                           id="fname">
+                    <input type="text" class="form-control" value="{{ user.first_name | title }}" name="fname" required id="fname">
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="mb-3">
                     <label for="lname" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" value="{{ user.last_name | title }}" name="lname"
-                           id="lname">
+                    <input type="text" class="form-control" value="{{ user.last_name | title }}" name="lname" required id="lname">
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="mb-3">
                     <label for="email" class="form-label">Address</label>
-                    <input type="text" class="form-control" value="{{ person.address }}" name="address" id="address">
+                    <input type="text" class="form-control" value="{{ person.address }}" name="address" id="address" required>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="dob" class="form-label">Date of Birth</label>
-                    <input type="date" class="form-control" value="{{ person.dob | date:'Y-m-d' }}" name="dob" id="dob">
+                    <input type="date" class="form-control" value="{{ person.dob | date:'Y-m-d' }}" name="dob" id="dob" required>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" value="{{ user.email }}" name="email" id="email">
+                    <input type="email" class="form-control" value="{{ user.email }}" name="email" id="email" required>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="mb-3">
                     <label for="cpnum" class="form-label">Contact Number</label>
-                    <input type="number" class="form-control" value="{{ person.contact }}" name="contact" id="cpnum">
+                    <input type="number" class="form-control" value="{{ person.contact }}" name="contact" id="cpnum" required>
                 </div>
             </div>
         </div>
