--- a/main/templates/main/pages/viewproductbycategory.html
+++ b/main/templates/main/pages/viewproductbycategory.html
@@ -23,7 +23,7 @@ List of Food
         <div class="foodproduct">
             {% for food in foods %}
             <div class="best-p1">
-                <img src="{{ food.image.url }}" alt="img">
+                <img src="{{ food.image.url }}" style="border-radius: 10px; margin-bottom: 10px;" alt="img">
                 <div class="best-p1-txt">
                     <div class="name-of-p">
                         <p>{{ food.name }}</p>
