--- a/main/templates/main/main-layout.html
+++ b/main/templates/main/main-layout.html
@@ -124,7 +124,7 @@
     <footer>
         <div class="f-design">
             <div class="f-design-txt container">
-                <p>Design and Code by BSIT-Capstone Project</p>
+                <p style="color:white">Design and Code by BSIT-Capstone Project</p>
             </div>
         </div>
     </footer>
